--- a/style.css
+++ b/style.css
@@ -208,25 +208,46 @@ section.first>div :nth-child(2) {
     cursor: pointer;
 }
 
-section .last{ 
+.last{ 
+    font-family: 'Martel Sans', sans-serif;
+    height: calc(100% - 100px);
+    margin: 34px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: rgb(255, 255, 255);
+    position: relative;
+    gap: 23px;
+    padding: 0 30px;
+}
+.last > :nth-child(1){
+    font-weight: 400;
+    font-size: 20px;
     text-align: center;
 }
-
-section .hero-buttons{
+/* .last>.hero-buttons {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 16px;
-    text-align: center;
-    padding: 10px 140px 3px 10px;
+} */
+.last input{
+    padding: 7px 101px 8px 14px;
+    color: white;
+    font-size: 12px;
+    border-radius: 4px;
+    background-color: rgba(23, 23, 23, 0.7);
+    border: 1px solid rgba(246, 238, 238, 0.5);
+    /* gap: 16px; */
 
 }
 
 footer {
     color: white;
     max-width: 60vw;
-    margin: auto;
-    padding: 60px;
+    margin: auto;;
+    padding: 15px;
 }
 
 footer .questions {
